2011-05-05 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: APACHE_VERSION returns an error message for--with-apache-version=1. 
    * src/apache-1/: removed from trunk

2011-04-14 Massimo Manghi <mxmanghi@apache.org>
    * src/Makefile.am,src/apache-2/Makefile.am: Add target install-data-hook with command line for
    removing unneeded .la files from target directories
    * configure.ac: doc/convert_examples.tcl is generated from template: added to AC_CONFIG_FILES 
    * debian/changelog,debian/control: changed to reflect improvement in the script for Debian

2011-04-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/convert_examples.tcl.in,doc/convert_examples.tcl: Added script to convert code examples
    from their native form to a sgml escaped form.
    * doc/Makefile.am: Target 'examples' added
    * doc/xml/install.xml: Expanded --with-apxs explanation.
    * doc/README: expanded with instructions for adding new examples to the docs.

2011-04-01 Massimo Manghi <mxmanghi@apache.org>
    * doc/: new directory doc/examples-sgml. This is the directory where examples ready for inclusion
    in the manual must stay. The directory doc/examples is now meant to keep examples suitable for
    actual test and exectution
    * doc/convert_examples.tcl: New procedure that check for changes in doc/examples and, if needed,
    creates/recreates the corrisponding file in doc/examples-sgml escaping characters

2011-03-01 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCode.c: 'abort_code' command is now created through the RIVET_CMD_OBJ macro

2011-02-14 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/mod_rivet.c: Only create root interpreter once, not twice.  
    In Rivet_CopyConfig cache_size and cache_free were getting copied twice.  
    Only once now.
    * src/apache-2/rivetCore.c: Remove unused command var from Rivet_Upload.
    Remove unneeded loglevel var from Rivet_LogErrorCmd.

2011-02-11 Massimo Manghi <mxmanghi@apache.org>