@@ -1,32 +1,32 @@
-     &lt;form action=&quot;vars.rvt&quot;&gt;
-      &lt;table&gt;
-	&lt;tbody&gt;
-	  &lt;tr&gt;
-	    &lt;td&gt;&lt;b&gt;Title:&lt;/b&gt;&lt;/td&gt;
-	    &lt;td&gt;&lt;input name=&quot;title&quot;&gt;&lt;/td&gt;
-	  &lt;/tr&gt;
-	  &lt;tr&gt;
-	    &lt;td&gt;&lt;b&gt;Salary:&lt;/b&gt;&lt;/td&gt;
-	    &lt;td&gt;&lt;input name=&quot;salary&quot;&gt;&lt;/td&gt;
-	  &lt;/tr&gt;
-	  &lt;tr&gt;
-	    &lt;td&gt;&lt;b&gt;Boss:&lt;/b&gt;&lt;/td&gt;
-	    &lt;td&gt;&lt;input name=&quot;boss&quot;&gt;&lt;/td&gt;&lt;/tr&gt;
-	  &lt;tr&gt;
-	    &lt;td&gt;&lt;b&gt;Skills:&lt;/b&gt;&lt;/td&gt;
-	    &lt;td&gt;
-	      &lt;select name=&quot;skills&quot; multiple=&quot;multiple&quot;&gt;
-		&lt;option&gt;c&lt;/option&gt;
-		&lt;option&gt;java&lt;/option&gt;
-		&lt;option&gt;Tcl&lt;/option&gt;
-		&lt;option&gt;Perl&lt;/option&gt;
-	      &lt;/select&gt;
-	    &lt;/td&gt;
-	  &lt;/tr&gt;
-	  &lt;tr&gt;
-	    &lt;td&gt;&lt;input type=&quot;submit&quot;&gt;&lt;/td&gt;
-	  &lt;/tr&gt;
-	&lt;/tbody&gt;
-      &lt;/table&gt;
-    &lt;/form&gt;
+&lt;form action=&quot;vars.rvt&quot;&gt;
+  &lt;table&gt;
+    &lt;tbody&gt;
+      &lt;tr&gt;
+        &lt;td&gt;&lt;b&gt;Title:&lt;/b&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;input name=&quot;title&quot; /&gt;&lt;/td&gt;
+      &lt;/tr&gt;
+      &lt;tr&gt;
+        &lt;td&gt;&lt;b&gt;Salary:&lt;/b&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;input name=&quot;salary&quot; /&gt;&lt;/td&gt;
+      &lt;/tr&gt;
+      &lt;tr&gt;
+        &lt;td&gt;&lt;b&gt;Boss:&lt;/b&gt;&lt;/td&gt;
+        &lt;td&gt;&lt;input name=&quot;boss&quot; /&gt;&lt;/td&gt;&lt;/tr&gt;
+      &lt;tr&gt;
+        &lt;td&gt;&lt;b&gt;Skills:&lt;/b&gt;&lt;/td&gt;
+        &lt;td&gt;
+          &lt;select name=&quot;skills&quot; multiple=&quot;multiple&quot;&gt;
+            &lt;option&gt;C&lt;/option&gt;
+            &lt;option&gt;Java&lt;/option&gt;
+            &lt;option&gt;Tcl&lt;/option&gt;
+            &lt;option&gt;Perl&lt;/option&gt;
+          &lt;/select&gt;
+        &lt;/td&gt;
+      &lt;/tr&gt;
+      &lt;tr&gt;
+        &lt;td&gt;&lt;input type=&quot;submit&quot; /&gt;&lt;/td&gt;
+      &lt;/tr&gt;
+    &lt;/tbody&gt;
+  &lt;/table&gt;
+&lt;/form&gt;
 
