@@ -1,31 +1,31 @@
-     <form action="vars.rvt">
-      <table>
-	<tbody>
-	  <tr>
-	    <td><b>Title:</b></td>
-	    <td><input name="title"></td>
-	  </tr>
-	  <tr>
-	    <td><b>Salary:</b></td>
-	    <td><input name="salary"></td>
-	  </tr>
-	  <tr>
-	    <td><b>Boss:</b></td>
-	    <td><input name="boss"></td></tr>
-	  <tr>
-	    <td><b>Skills:</b></td>
-	    <td>
-	      <select name="skills" multiple="multiple">
-		<option>c</option>
-		<option>java</option>
-		<option>Tcl</option>
-		<option>Perl</option>
-	      </select>
-	    </td>
-	  </tr>
-	  <tr>
-	    <td><input type="submit"></td>
-	  </tr>
-	</tbody>
-      </table>
-    </form>
+<form action="vars.rvt">
+  <table>
+    <tbody>
+      <tr>
+        <td><b>Title:</b></td>
+        <td><input name="title" /></td>
+      </tr>
+      <tr>
+        <td><b>Salary:</b></td>
+        <td><input name="salary" /></td>
+      </tr>
+      <tr>
+        <td><b>Boss:</b></td>
+        <td><input name="boss" /></td></tr>
+      <tr>
+        <td><b>Skills:</b></td>
+        <td>
+          <select name="skills" multiple="multiple">
+            <option>C</option>
+            <option>Java</option>
+            <option>Tcl</option>
+            <option>Perl</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td><input type="submit" /></td>
+      </tr>
+    </tbody>
+  </table>
+</form>
