@@ -1,3 +1,6 @@
+2011-05-09 Massimo Manghi <mxmanghi@apache.org>
+    * src/apache-2/mod_rivet.c: fixed misleading error message displayed when rivet_abort_script fails
+    * 
 2011-05-05 Massimo Manghi <mxmanghi@apache.org>
     * configure.ac: APACHE_VERSION returns an error message for--with-apache-version=1. 
     * src/apache-1/: removed from trunk
